setup css breakpoints and fix minor layout issues on cohort divs

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,5 +1,5 @@
 @import '../materialize-src/sass/materialize.scss';
-
+/* materialize is imported here so we can extend the presets, see the bottom of the page for an example of that */
 
 
 $primary-white: #F5F5F5;
@@ -7,6 +7,33 @@ $primary-blue: #0288d1;
 $primary-teal: #00bfa5;
 $primary-red: #e64a19;
 $primary-black: #424242;
+
+
+/* These mixins are for CSS breakpoints, to make our website look good at all sizes and be responsive  */
+@mixin for-phone-only {
+  @media (max-width: 599px) { @content; }
+}
+@mixin for-tablet-portrait-up {
+  @media (min-width: 600px) { @content; }
+}
+@mixin for-tablet-portait-only {
+  @media (min-width: 600px) and (max-width: 899px) { @content; }
+}
+@mixin for-tablet-landscape-up {
+  @media (min-width: 900px) { @content; }
+}
+@mixin for-tablet-landscape-only {
+  @media (min-width: 900px) and (max-width: 1199px) { @content; }
+}
+@mixin for-desktop-up {
+  @media (min-width: 1200px) { @content; }
+}
+@mixin for-desktop-only {
+  @media (min-width: 1200px) and (max-width: 1799px) { @content; }
+}
+@mixin for-big-desktop-up {
+  @media (min-width: 1800px) { @content; }
+}
 
 a,
 body,
@@ -18,6 +45,14 @@ p {
     margin: 0;
     padding: 0;
     font-size: 100%;
+}
+
+h1 {
+    font-size: 2.8em;
+}
+
+h2 {
+    font-size: 1.4em;
 }
 
 .badge,
@@ -90,7 +125,7 @@ p {
 }
 
 .cohort img{
-  width: 10em;
+  width: 8em;
   border-radius: 10em;
   border: 1px solid $primary-white;
 }
@@ -103,17 +138,15 @@ p {
   float: right;
   margin-right: 15%;
   padding-top: 1em;
-  font-size: 1.4em;
+  font-size: 1.6em;
 }
 
-h1 {
-    font-size: 2.8em;
+.cohortName{
+  color: $primary-black;
+  font-size: 1.2em;
 }
 
-h2 {
-    font-size: 1.4em;
-}
-
+/* the classes below extend preset CSS that is included in materialize. extend is one of the things you can do with SCSS. if you do not understand this, please see the SCSS tutorial linked in our chat, lookup documentation, and ask :)   */
 .blueBackground {
   @extend .light-blue, .darken-2;
   color: $primary-white;
